arena/bindings/game/game.h

// Generated by `wit-bindgen` 0.60.0. DO NOT EDIT!
#ifndef __BINDINGS_GAME_H
#define __BINDINGS_GAME_H
#ifdef __cplusplus
extern "C" {
#endif

#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>

typedef struct game_string_t {
  uint8_t*ptr;
  size_t len;
} game_string_t;

typedef struct {
  uint8_t *ptr;
  size_t len;
} game_list_u8_t;

// One seat's pending message, as the same frame that crossed the
// WebSocket in the container runtime (protocol is game-defined, untouched).
typedef struct softmax_game_types_seat_message_t {
  uint32_t   seat;
  game_list_u8_t   payload;
} softmax_game_types_seat_message_t;

typedef struct {
  softmax_game_types_seat_message_t *ptr;
  size_t len;
} softmax_game_types_list_seat_message_t;

typedef struct softmax_game_types_step_output_t {
  // Messages to deliver, host-fanned-out per seat.
  softmax_game_types_list_seat_message_t   messages;
  // True once; the host then calls finish().
  bool   done;
} softmax_game_types_step_output_t;

typedef softmax_game_types_seat_message_t game_seat_message_t;

typedef softmax_game_types_step_output_t game_step_output_t;

typedef struct {
  bool is_err;
  union {
    game_string_t err;
  } val;
} game_result_void_string_t;

typedef struct {
  game_seat_message_t *ptr;
  size_t len;
} game_list_seat_message_t;

typedef struct {
  bool is_err;
  union {
    game_step_output_t ok;
    game_string_t err;
  } val;
} game_result_step_output_string_t;

// Imported Functions from `softmax:game/output@0.1.0`
// Final results.json bytes. Emit exactly once, from finish().
extern void softmax_game_output_results(game_list_u8_t *body);
// Append replay bytes; the host streams them to S3.
extern void softmax_game_output_replay_append(game_list_u8_t *chunk);

// Imported Functions from `softmax:game/log@0.1.0`
extern void softmax_game_log_line(game_string_t *level, game_string_t *msg);

// Exported Functions from `game`
bool exports_game_init(game_string_t *config, uint32_t seats, uint64_t seed, game_string_t *err);
bool exports_game_step(game_list_seat_message_t *actions, game_step_output_t *ret, game_string_t *err);
bool exports_game_finish(game_string_t *err);

// Helper Functions

void game_list_u8_free(game_list_u8_t *ptr);

void softmax_game_types_seat_message_free(softmax_game_types_seat_message_t *ptr);

void softmax_game_types_list_seat_message_free(softmax_game_types_list_seat_message_t *ptr);

void softmax_game_types_step_output_free(softmax_game_types_step_output_t *ptr);

void game_seat_message_free(game_seat_message_t *ptr);

void game_step_output_free(game_step_output_t *ptr);

void game_result_void_string_free(game_result_void_string_t *ptr);

void game_list_seat_message_free(game_list_seat_message_t *ptr);

void game_result_step_output_string_free(game_result_step_output_string_t *ptr);

// Sets the string `ret` to reference the input string `s` without copying it
void game_string_set(game_string_t *ret, const char*s);

// Creates a copy of the input nul-terminated string `s` and
// stores it into the component model string `ret`.
void game_string_dup(game_string_t *ret, const char*s);

// Creates a copy of the input string `s` with length `len` and
// stores it into the component model string `ret`.
// The length is specified in code units (bytes for UTF-8, 16-bit values for UTF-16).
void game_string_dup_n(game_string_t *ret, const char*s, size_t len);

// Deallocates the string pointed to by `ret`, deallocating
// the memory behind the string.
void game_string_free(game_string_t *ret);

#ifdef __cplusplus
}
#endif
#endif